# webcam-experiment

./: .gitignore  cleanup.sh  configure.ac
src/: Makefile.am  output.mjpg
src/audiotest/: .gitignore  Makefile.am  audioreader.cc  audiowriter.cc
src/capture/: .#h264_degrader.cc  Makefile.am  h264_degrader.cc  h264_degrader.hh
src/display/: Makefile.am  display.cc
src/frontend/: Makefile.am  audio-sinks.sh  audio-sources.sh  my-camera.cc  run  run.py  run1.sh  run2.sh  test.sh
src/input/: Makefile.am  audio.cc  audio.hh  camera.cc  camera.hh
src/util/: Makefile.am  child_process.cc  file_descriptor.hh  raster.cc  raster.hh  system_runner.cc
